Code analysis #2