@@ -6,10 +6,12 @@ import no.ssb.kostra.control.felles.ControlFelt1BoolskSaaFelt2Boolsk;
 import no.ssb.kostra.control.felles.ControlFilbeskrivelse;
 import no.ssb.kostra.control.felles.ControlRecordLengde;
 import no.ssb.kostra.controlprogram.Arguments;
-import no.ssb.kostra.felles.*;
+import no.ssb.kostra.felles.Constants;
+import no.ssb.kostra.felles.ErrorReport;
+import no.ssb.kostra.felles.ErrorReportEntry;
+import no.ssb.kostra.felles.KostraRecord;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @SuppressWarnings("SpellCheckingInspection")
 public class Main {
@@ -36,7 +38,7 @@ public class Main {
         final var fieldDefinitions = FieldDefinitions.getFieldDefinitions();
         final var records = inputFileContent.stream()
                 .map(p -> new KostraRecord(p, fieldDefinitions))
-                .collect(Collectors.toList());
+                .toList();
 
         //final var n = records.size(); // TOOD: Not in use
 
