@@ -25,8 +25,7 @@ public class ControlDubletter {
                 .stream()
                 .filter(p -> p.getValue() > 1)
                 .map(Map.Entry::getKey)
-                .sorted()
-                .collect(Collectors.toList());
+                .sorted().toList();
 
         return !dubletter.isEmpty() && errorReport.addEntry(
                 new ErrorReportEntry("4. Dublettkontroller", "Kontroll Dubletter", " ", " "
